@@ -24,13 +24,16 @@ VDRLIBDIR ?= $(UPNPDIR)/../../lib
 
 APIVERSION = $(shell sed -ne '/define UPNPPLUGIN_VERSION/s/^.*"\(.*\)".*$$/\1/p' $(UPNPDIR)/include/plugin.h)
 
+VDRDIR ?= $(UPNPDIR)/../../..
+VDRAPIVERSION = $(shell sed -ne '/define APIVERSION/s/^.*"\(.*\)".*$$/\1/p' $(VDRDIR)/config.h)
+
 INCLUDES += -I$(UPNPDIR)/include
 
 DEFINES  += -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE
 
 OBJS     = $(SCHEMA)Provider.o
 
-LIBS	 = -L$(VDRLIBDIR) -Wl,-R$(VDRLIBDIR) -lvdr-upnp
+LIBS	 = -L$(VDRLIBDIR) -Wl,-R$(VDRLIBDIR) $(VDRLIBDIR)/libvdr-upnp.so.$(VDRAPIVERSION)
 
 all: libupnp-$(SCHEMA)-provider.so
 
