@@ -1,6 +1,10 @@
 VDR Plugin 'upnp' Revision History
 ----------------------------------
 
+ - New: plugin makefile now links against the full file of the upnp plugin
+        so-file. This makes symbolic link against the .so obsolete.
+        Thanks to mini73
+
 2012-10-24: Version 1.0.0
 
  - New: Plug-ins for providing access to live-TV and recordings instead of
